# Redes-de-Computadores-v2

./: README.md
Atividades/Artigo 1/: README.md
Aula-1/: README.md
Aula-1/Lista-1/: README.html  README.md
Aula-3/: README.md
Aula-6/Socket_C_PY/C/: cliente_echo.c  servidor_echo.c
Aula-6/Socket_C_PY/PY/: udpclient.py  udpserver.py
Listas/Lista-2/: README.md
Listas/Lista-4/: README.md
Listas/Lista-5/: README.md
Listas/Livro 4/: README.md
Listas/Livro 5/: README.md
Trabalhos/C++/rathed/: CMakeLists.txt  main.cpp
Trabalhos/C++/rathed/model/: model.pb.h
Trabalhos/C++/rathed/peers/: Leecher.cpp  Leecher.h  Seed.cpp  Seed.h
Trabalhos/C++/rathed/rastreador/: BackupRastreador.cpp  Rastreador.cpp  Rastreador.h
Trabalhos/C++/rathed/rede/: CamadaDeRede.cpp  CamadaDeRede.h
Trabalhos/C++/rathed/util/: util.h
Trabalhos/C++/rathed_leecher/: CMakeLists.txt  main.cpp
Trabalhos/C++/rathed_leecher/model/: model.proto
Trabalhos/C++/rathed_leecher/peers/: Leecher.cpp  Leecher.h
Trabalhos/C++/rathed_leecher/template/: widget.cpp  widget.h  widget.ui
Trabalhos/C++/rathed_leecher_old/: CMakeLists.txt  main.cpp
Trabalhos/C++/rathed_leecher_old/model/: model.pb.cc
Trabalhos/C++/rathed_leecher_old/peers/: Leecher.cpp
Trabalhos/C++/rathed_leecher_old/template/: ui_widget.h  widget.cpp  widget.ui
